--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,25 @@
+#jdbc url
 spring.datasource.url=jdbc:mysql://localhost:3306/pang-blog?autoReconnect=true&useSSL=false&serverTimezone=Asia/Shanghai&useUnicode=true&allowMultiQueries=true
+#MySQL用户名
 spring.datasource.username=root
+#MySQL密码
 spring.datasource.password=123
+#jdbc驱动
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#设置编码格式位utf8mb4，支持emjoy表情
 spring.datasource.hikari.connection-init-sql=SET NAMES utf8mb4 COLLATE utf8mb4_unicode_ci
+#项目启动端口
 server.port=8877
 
+#mybatis的Mapper文件路径
 mybatis.mapper-locations= classpath:mapping/*Mapper.xml
 mybatis.type-aliases-package=com.ocean.pojo
 
-logging.level.com.pang.blog.dao=debug
-
+#静态文件的绝对地址（打包以后无法在项目内部上传静态文件、必须指定绝对地址）
 web.upload-path=E:/Pang-Blog/
+#扫描全部的静态文件
 spring.mvc.static-path-pattern=/**
+#将项目内的静态文件也包括进来
 spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,\
   classpath:/static/,classpath:/public/,file:${web.upload-path}
 
