--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mavon-editor": "^2.6.17",
     "qs": "^6.6.0",
     "vue": "^2.5.21",
+    "vue-highlightjs": "^1.3.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
