添加Linux环境下运行的'生成jar包.sh'

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #jdbc url
-spring.datasource.url=jdbc:mysql://localhost:3306/blog?autoReconnect=true&useSSL=false&serverTimezone=Asia/Shanghai&useUnicode=true&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://localhost:3306/pang-blog?autoReconnect=true&useSSL=false&serverTimezone=Asia/Shanghai&useUnicode=true&allowMultiQueries=true
 #MySQL用户名
 spring.datasource.username=root
 #MySQL密码
