--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "iview-editor": "^1.1.1",
     "mavon-editor": "^2.6.17",
     "qs": "^6.6.0",
+    "vant": "^1.6.6",
     "vue": "^2.5.21",
     "vue-highlightjs": "^1.3.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@vue/cli-plugin-babel": "^3.3.0",
     "@vue/cli-service": "^3.3.0",
     "lint-staged": "^8.1.0",
