--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@vue/cli-plugin-babel": "^3.3.0",
     "@vue/cli-service": "^3.3.0",
+    "compression-webpack-plugin": "^2.0.0",
     "lint-staged": "^8.1.0",
     "vue-template-compiler": "^2.5.21"
   },
